--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         <div class="hero-content">
             <img src="./images/logo.png" alt="Project Troon Logo" class="hero-logo fade-in">
             <h1 class="hero-title fade-in">Project Troon</h1>
-            <p class="hero-subtitle fade-in delay-1">Experience your childhood with Projoct Troon. Coming soon.</p>
+            <p class="hero-subtitle fade-in delay-1">Experience your childhood with Project Troon. Coming soon.</p>
             <p class="hero-subtitle fade-in delay-1" id="countdown">Loading countdown...</p>
             <div class="fade-in delay-2">
                 <a href="https://discord.gg/f7nVDThRYc" class="btn btn-primary" target="_blank">Join Our Discord</a>
